# dbx

./: .gitignore  .mcp.json  .oxfmtrc.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.husky/: pre-commit
crates/: README.md
deploy/: Dockerfile
docs/: index.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.json
mcp/: README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.json
plugins/: README.md
scripts/: run-check.mjs
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-web/: Cargo.toml
src-web/src/: auth.rs  main.rs  state.rs
src-web/src/routes/: ai.rs  connection.rs  history.rs  layout.rs  mod.rs  mongo.rs  query.rs  redis.rs  schema.rs  sql_file.rs  table_import.rs  transfer.rs  update.rs
tests/: actionActivation.test.ts  agentDriverInstallHint.test.ts  agentDriverUpdateBadge.test.ts  agentDriverUpdatePrompt.test.ts  agentHandoff.test.ts  agentRuntimeSnapshot.test.ts  aiSqlExecutionPolicy.test.ts  appTheme.test.ts  appUpdateBadge.test.ts  cellValue.test.ts  connectionPresentation.test.ts  connectionUrl.test.ts  connectionUrlPlaceholder.test.ts  createDatabaseSql.test.ts  dataCompare.test.ts  dataGridColumnWidth.test.ts  dataGridScrollGutter.test.ts  dataGridSql.test.ts  databaseCapabilities.test.ts  databaseExportSelection.test.ts  databaseOptionSearch.test.ts  databaseSearch.test.ts  databaseTree.test.ts  defaultDatabase.test.ts  (+36 more)
(+595 files in other folders)
