[workspace]
resolver = "2"
members = ["src-tauri", "crates/dbx-core", "crates/dbx-web"]

[patch.crates-io]
tokio-postgres = { path = "../tokio-postgres-gaussdb/tokio-postgres" }
postgres-types = { path = "../tokio-postgres-gaussdb/postgres-types" }
postgres-protocol = { path = "../tokio-postgres-gaussdb/postgres-protocol" }

[profile.release]
panic = "abort"
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"
