[package]
name = "dbx-web"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "dbx-web"
path = "src/main.rs"

[dependencies]
dbx-core = { path = "../crates/dbx-core" }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
async-stream = "0.3"
futures = "0.3"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-util = "0.7"
